force-app/main/default/objects/KimbleOne__DeliveryPortfolio__c/KimbleOne__DeliveryPortfolio__c.object-meta.xml
<CustomObject>
    <label>Delivery Portfolio</label>
    <nameField>
        <label>Delivery Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Portfolios</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>