force-app/main/default/objects/KimbleOne__DeliveryPortfolio__c/fields/KimbleOne__Criteria__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Criteria__c</fullName>
    <label>Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>