force-app/main/default/objects/KimbleOne__DeliveryPortfolio__c/fields/KimbleOne__InclusionMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InclusionMode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inclusion Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>DeliveryPortfolioInclusionMode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Delivery Portfolios</relationshipLabel>
    <relationshipName>DeliveryPortfolios</relationshipName>
    <type>Lookup</type>
</CustomField>